# draft-irtf-cfrg-sigma-protocols

./: .gitignore  archive.json  draft-irtf-cfrg-fiat-shamir.html  draft-irtf-cfrg-fiat-shamir.md  draft-irtf-cfrg-fiat-shamir.txt  draft-irtf-cfrg-sigma-protocols.html  draft-irtf-cfrg-sigma-protocols.md  draft-irtf-cfrg-sigma-protocols.txt  index.html
NIZK-spec/: draft-irtf-cfrg-fiat-shamir.html  draft-irtf-cfrg-fiat-shamir.txt  draft-irtf-cfrg-sigma-protocols.html  draft-irtf-cfrg-sigma-protocols.txt  index.html
draft-irtf-cfrg-fiat-shamir-01/: draft-irtf-cfrg-fiat-shamir.html  index.html
draft-irtf-cfrg-sigma-protocols-01/: index.html
draft-irtf-cfrg-sigma-protocols-02/: draft-irtf-cfrg-sigma-protocols.txt  index.html
editorial/: draft-irtf-cfrg-fiat-shamir.html  draft-irtf-cfrg-fiat-shamir.txt  draft-irtf-cfrg-sigma-protocols.html  draft-irtf-cfrg-sigma-protocols.txt  index.html
fixTestVectorsOverride/: draft-irtf-cfrg-fiat-shamir.html  draft-irtf-cfrg-fiat-shamir.txt  draft-irtf-cfrg-sigma-protocols.html  (+2 more)
poc/: LICENSE  MANIFEST.in  README.md  __init__.py  ciphersuite.sage  codec.sage  composition.sage  duplex_sponge.sage  fiat_shamir.sage  makefile  pyproject.toml  setup.py  sigma_protocols.sage  test_composition.py  test_drng.py  test_drng.sage  test_duplex_sponge.py  test_duplex_sponge.sage  test_sigma_protocols.py  test_sigma_protocols.sage  test_tampering.sage  xof.sage
poc/fiat_shamir/: __init__.py  codec.py  duplex_sponge.py  transform.py
poc/groups/: __init__.py  base.py  elliptic_curve.py  field.py  groups.sage  p256.py
poc/sigma_protocols/: __init__.py  ciphersuite.py  composition.py  sigma_protocols.py
poc/vectors/: Schnorr_Shake128_BLS12381.json  Schnorr_Shake128_P256.json  duplexSpongeVectors.json  duplexSpongeVectors.txt  sigma-proofs_Shake128_BLS12381.json  sigma-proofs_Shake128_BLS12381.txt  sigma-proofs_Shake128_P256.json  sigma-proofs_Shake128_P256.txt  testSigmaProtocols.json  testSigmaProtocols.txt
(+115 files in other folders)
